# HomerFindr

./: .env.example  .gitignore  BUZZBOOK_MASTER_PLAN.md  CLAUDE.md  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: auto-release.yml  release.yml
.omc/: project-memory.json
.omc/state/: agent-replay-c255b2a1-7db3-4b6d-b9de-6bba98b31746.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-26T14-25-50-540Z.json  checkpoint-2026-03-26T16-08-58-139Z.json  checkpoint-2026-03-26T17-20-26-041Z.json  checkpoint-2026-03-26T18-02-55-781Z.json  (+2 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: knowledge-base.md  zero-results-from-providers.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
homebrew-formula/: homerfindr.rb
homesearch/: __init__.py  config.py  database.py  main.py  models.py
homesearch/api/: routes.py
homesearch/providers/: __init__.py  base.py  homeharvest_provider.py  redfin_provider.py  zillow_provider.py
homesearch/services/: offer_service.py  report_service.py  road_service.py  scheduler_service.py  school_service.py  search_service.py  update_service.py  zip_service.py
homesearch/tui/: config.py  first_run.py  menu.py  results.py  saved_browser.py  settings.py  smtp_wizard.py  splash.py  styles.py  web_launcher.py  wizard.py  zip_browser.py
packaging/: HomerFindr-Install.bat  HomerFindr-Install.command  HomerFindr.command  README.md  homerfindr_launcher.sh
quoteme/: README.md
scripts/: backup.ps1  com.homerfindr.backup.plist
tests/: test_web_launcher.py
(+86 files in other folders)
