[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "homesearch"
version = "0.1.0"
description = "Universal home search aggregator - find your perfect home across all platforms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "homeharvest>=0.4.0",
    "redfin>=0.2.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "uszipcode>=1.0.1",
    "geopy>=2.4.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
homesearch = "homesearch.main:app"

[tool.setuptools.packages.find]
include = ["homesearch*"]
